# knowledge

./: .djlintrc  .gitignore  .prettierrc.json  Dockerfile  docker-compose-prod.yml  docker-compose.yml  eslint.config.mjs  nginx.conf  package.json  pyproject.toml  requirements.txt  tailwind.config.js  vite.config.js
common/: admin.py  models.py  urls.py  views.py
common/migrations/: 0001_initial.py
common/templates/common/: dashboard.html
config/: context_processors.py  settings.py  urls.py
inquiry/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
inquiry/migrations/: 0001_initial.py  0002_tag_remove_inquiry_tags_inquiry_tags.py  0003_remove_category_parent_alter_inquiry_category_and_more.py
inquiry/templates/inquiry/: base.html  dashboard.html  inquiry_confirm_delete.html  inquiry_detail.html  inquiry_form.html  inquiry_list.html  knowledge_confirm_delete.html  knowledge_detail.html  knowledge_form.html  knowledge_list.html
knowledge/: admin.py  forms.py  models.py  urls.py  views.py
knowledge/migrations/: 0001_initial.py
knowledge/templates/knowledge/: knowledge_confirm_delete.html  knowledge_detail.html  knowledge_form.html  knowledge_list.html
templates/layouts/: base.html  navbar.html
